@startUML designClassesUseCase2

<style>
classDiagram {
  class {
      header {
        FontStyle bold
      }
  }
}
</style>

!theme plain
hide circle

skinparam actorStyle awesome
allowmixing

actor Student

'' PRINCIPAL PANEL

Class PrincipalPanel {
    + setContentPanel(): void
    - initializePanel(): void
}

Navbar -d-* PrincipalPanel

'' NAVBAR

Class "<<JPanel>> \n Navbar " as Navbar {

}

'' INTERACTIVE LABEL

Class "<<JLabel>> \n InteractiveLabel" as InteractiveLabel {
    
}

Class "<<MouseListener>> \n LabelListener" as LabelListener {
    - mouseClicked(MouseEvent e)
}

InteractiveLabel -d-* Navbar: 3
LabelListener --* InteractiveLabel

'' TESTVIEWPANEL

Class "<<JPanel>> \n QuestionsListPanel  " as QuestionsListPanel {

}

Class "<<JPanel>> \n TestInfoPanel " as TestInfoPanel {
    - clock: JLabel 
    - answeredQuestions: JLabel
    - testName: JLabel
}

Class "<<JScrollPane>> \n ScrollableQuestionsPanel " as ScrollableQuestionsPanel {

}

Class "<<JButton>> \n BlueButton " as BlueButton {

}

Class "<<JPanel>> \n QuestionPanel  " as QuestionPanel {
    - questionNumber: JLabel
    - questionDomain: JLabel
    - questionDescription: JLabel
    - optionText[]: JTextField
    - optionBox[]: JCheckBox
}

Class "<<JLabel>> \n QuestionDescription" as QuestionDescription {
    + QuestionDescription(QuestionType)
}

Class "<<JFrame>> \n TestView  " as TestView{

}

PrincipalPanel -l-* TestView

QuestionPanel "1...*" --* ScrollableQuestionsPanel
TestInfoPanel --* QuestionsListPanel
BlueButton --* TestInfoPanel
ScrollableQuestionsPanel --* QuestionsListPanel
QuestionsListPanel --* TestView
QuestionDescription --* QuestionPanel

'' SOLUTIONSVIEW

Class "<<JFrame>> \n SolutionsView" as SolutionsView {

    
}

Class "<<JPanel>> \n SolutionsViewPanel  " as SolutionsViewPanel {

}

CLass "<<JPanel>> \n QuestionsSummaryPanel " as QuestionsSummaryPanel {
    - QuestionSummary[]: JLabel
}

Class "<<JScrollPane>> \n ScrollableQuestionsSummaryPanel " as ScrollableQuestionsSummaryPanel {
    - QuestionsSummaryTitle: JLabel
}

Class "<<JPanel>> \n AnswersSummaryPanel" as AnswersSummaryPanel {
    - answersTitle: JLabel
}

Class "<<JScrollPane>> \n ScrollableAnswersPanel" as ScrollableAnswersPanel {

}

Class "<<JPanel>> \n AnswerPanel" as AnswerPanel {
    - option: JTextField
    - optionJustification: JLabel
    - resultIcon: JLabel
}

PrincipalPanel --* SolutionsView
SolutionsView *-- SolutionsViewPanel
SolutionsViewPanel *-- AnswersSummaryPanel
SolutionsViewPanel *-- QuestionsSummaryPanel
QuestionsSummaryPanel *-- ScrollableQuestionsSummaryPanel
AnswersSummaryPanel *-- ScrollableAnswersPanel
ScrollableAnswersPanel *-- "1...*" AnswerPanel

'' ANSWERTESTCONTROLLER

Class AnswerTestController{
    loadQuestions()
    saveAnswers()
    loadAnswers()
}

Class Test{

    - type: String
    - duration: int 
    - calification: float

    + addQuestion(Question)
    + getQuestion(questionNumber)
}

Class Question{

    - description: string
    - justification: text
    - userAnswer: answer
    - questionType: boolean
    - questionNumber: int

    + addAnswer(Answer): void
    + answerQuestion(Answer): void
    + getDescription(): String
    + getJustification(): String
    + getUserAnswer(): Answer
    + getQuestionType(): boolean
    + getQuestionNumber(): int
    + getAnswer(answerNumber): Answer
}

Class Answer{

    - answerText: String
    - answerType: Boolean
    - isCorrect: Boolean
    - answerNumber: int
}

Student -r- TestView
TestView --> AnswerTestController
AnswerTestController <-r- SolutionsView
AnswerTestController --> Test
Question -r-* Test
Answer -r-* Question

@endUML